--- a/views/admin/add-post.ejs
+++ b/views/admin/add-post.ejs
@@ -13,6 +13,7 @@
                       action="/admin/<% if(edit) { %>edit-post<% } else { %>add-post<% } %>"
                       method="POST"
                       >
+                      <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                    
                     <fieldset>
                         <div class="form-group">
