--- a/views/admin/favourit.ejs
+++ b/views/admin/favourit.ejs
@@ -16,6 +16,7 @@
               <p class="card-text"><%= favourit.post.description %></p>
             </div>
             <form method="post" action="/admin/delete-favourit">
+              <input type="hidden" name="_csrf" value="<%= csrfToken %>">
               <button type="submit" class="btn btn-danger">delete</button>
               <input type="hidden" value="<%= favourit.post._id %>" name="postId">
             </form>
