--- a/views/shop/home.ejs
+++ b/views/shop/home.ejs
@@ -154,6 +154,7 @@
                   <!-- <h5><span class="badge badge-pill  badge-warning " style="font-size: 17px;"><%= post.price %> DZD</span></h5>
                   <p class="card-text"> </p>
                   <form class="form-inline" method="post" action="/admin/favourit">
+                    <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                     <button type="submit" class="btn btn-outline-danger"><i class="fas fa-heart"></i></button>
                     <input name="postId" value="<%= post._id %>" type="hidden">
                   </form> -->
