--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -23,14 +23,14 @@
                                    
 
                             <div class="form-label-group">
-                                <input type="email" name="email" value="" id="inputEmail" class="form-control" placeholder="Email address"
-                                    autofocus>
+                                <input type="email" name="email"  id="inputEmail" class="form-control" placeholder="Email address"
+                                    autofocus value="<%= oldInput.email %>">
                                 <!-- <label for="inputEmail">Email address</label> -->
                             </div>
 
                             <div class="form-label-group">
-                                <input type="password" style="margin-top: 20px;" value="" name="password" id="inputPassword"
-                                    class="form-control" placeholder="Password">
+                                <input type="password" style="margin-top: 20px;"  name="password" id="inputPassword"
+                                    class="form-control" placeholder="Password" value="<%= oldInput.password %>">
                                 <!-- <label for="inputPassword">Password</label> -->
                             </div>
 
