--- a/views/includes/image-modal.ejs
+++ b/views/includes/image-modal.ejs
@@ -1,5 +1,5 @@
 <!-- The Modal -->
-<div id="myModal" class="modal">
+<div id="myModal" class="modall">
   <span class="close">&times;</span>
   <img class="modal-content" id="img01">
   <div id="caption"></div>
