--- a/views/shop/home.ejs
+++ b/views/shop/home.ejs
@@ -145,7 +145,11 @@
             <% for(let post of posts){ %> 
             <div class="col-lg-4 col-md-6 mb-4">
               <div class="card h-100">
-                <img  class="card-img-top" src="<%= post.image %>" alt="<%= post.title %>">
+              <a href="/post/<%= post._id %>">
+              <img  style="  height: 150px; object-fit: cover;" class="card-img-top" src="<%= post.image %>" alt="<%= post.title %>">
+              </a>
+
+              
                 
                 <div class="card-body">
                   <h4 class="card-title">
